--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-feature android:name="android.hardware.location.gps"/>
 
     <application
+        android:name=".OntapApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,8 +17,9 @@
 
         <activity
             android:name=".ui.activities.main.MainActivity"
-            android:theme="@style/AppTheme.SplashScreen">
-            <intent-filter>
+            android:theme="@style/AppTheme.SplashScreen"
+            android:label="@string/app_name_short">
+            <intent-filter android:label="@string/app_name_short">
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
