--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.activities.multitap.MultitapActivity"/>
+        <activity android:name=".ui.activities.multitap.MultitapActivity"
+                  android:theme="@style/AppTheme.SplashScreen"/>
         <activity android:name=".ui.activities.settings.SettingsActivity"/>
         <activity android:name=".ui.activities.about.AboutActivity"/>
 
