--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
                  android:label="@string/notification_service"
                  android:permission="android.permission.BIND_JOB_SERVICE"/>
 
-        <receiver android:name="background.PhoneBootReceiver" >
+        <receiver android:name=".background.PhoneBootReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
